--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:19
 
 variables:
-  PROJECT_REPO: mcraven/librl
+  PROJECT_REPO: matthew-mcraven/librl
   REMOTE_REPO: 10.0.0.8:15050
 
   # Need to name images per commit to avoid docker-in-docker issues.
@@ -23,7 +23,8 @@ before_script:
 
 stages:
   - Build Library
-  - Deploy to PyPi
+  - Test
+  - Deploy
 #########
 # Build the boost / python dependencies of out project.
 # All jobs use GIT_LFS_SKIP_SMUDGE, which prevents GIT LFS from pulling large data files.
@@ -35,11 +36,19 @@ Build Dependencies:
     - docker build -f ./BuildLibrary.Dockerfile -t ${REMOTE_IMAGE_NAME}:${CI_VERSION} .
     - docker push ${REMOTE_IMAGE_NAME}:${CI_VERSION}
 
-Deploy to PyPi:
-  rules:
-    - if: $CI_COMMIT_TAG
-  stage: Deploy to PyPi
+Run Tests:
+  stage: Test
   needs: [Build Dependencies]
   script:
     - docker pull ${REMOTE_IMAGE_NAME}:${CI_VERSION}
-    - docker run --rm ${REMOTE_IMAGE_NAME}:${CI_VERSION} /bin/sh -c "pip install twine &&  ls && python setup.py sdist && twine upload -u ${TWINE_USERNAME} -p ${TWINE_PASSWORD} dist/*"
+    - docker run --rm ${REMOTE_IMAGE_NAME}:${CI_VERSION}  /bin/sh -c "pip install -r tests/requirements.txt && python -m unittest discover tests"
+    
+Deploy to PyPi:
+  rules:
+    - if: $CI_COMMIT_TAG
+  stage: Deploy
+  needs: [Build Dependencies]
+  script:
+    - docker pull ${REMOTE_IMAGE_NAME}:${CI_VERSION}
+    - echo "-u ${TWINE_USERNAME} -p ${TWINE_PASSWORD}"
+    - docker run --rm ${REMOTE_IMAGE_NAME}:${CI_VERSION} /bin/sh -c "pip install twine && python setup.py sdist && twine upload -u ${TWINE_USERNAME} -p ${TWINE_PASSWORD} dist/*"
