--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -9,6 +9,7 @@ matplotlib==3.3.2
 more-itertools==8.6.0
 networkx==2.5
 numpy==1.19.2
+overrides==3.1.0
 Pillow==8.0.0
 pybullet==3.0.6
 pyglet==1.5.0
