--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ Deploy to PyPi:
   rules:
     - if: $CI_COMMIT_TAG
   stage: Deploy
-  needs: [Build Dependencies]
+  needs: [Build Dependencies, Run Tests]
   script:
     - docker pull ${REMOTE_IMAGE_NAME}:${CI_VERSION}
     - echo "-u ${TWINE_USERNAME} -p ${TWINE_PASSWORD}"
