--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 decorator==4.4.2
-future==0.18.2
 matplotlib==3.3.2
 networkx==2.5
+cloudpickle==1.6.0
+dataclasses==0.6
+future==0.18.2
+gym==0.17.3
+more-itertools==8.6.0
 numpy==1.19.2
 overrides==3.1.0
-Pillow==8.0.0
-scipy==1.5.2
-torch==1.6.0
-torchvision==0.7.0
-more-itertools==8.6.0
+Pillow==8.0.1
+pyglet==1.5.0
+scipy==1.5.4
+torch==1.7.0
+torchvision==0.8.1
+typing-extensions==3.7.4.3
