--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,22 +1,8 @@
+# First install ../requirements.txt
 certifi==2020.11.8
-cloudpickle==1.6.0
 cycler==0.10.0
-decorator==4.4.2
-future==0.18.2
-gym==0.17.3
 kiwisolver==1.3.1
-matplotlib==3.3.2
-more-itertools==8.6.0
-networkx==2.5
-numpy==1.19.2
-overrides==3.1.0
-Pillow==8.0.0
 pybullet==3.0.6
-pyglet==1.5.0
 pyparsing==2.4.7
-pytest==6.1.2
 python-dateutil==2.8.1
-scipy==1.5.2
 six==1.15.0
-torch==1.6.0
-torchvision==0.7.0
