--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,11 @@ Build Dependencies:
     - docker push ${REMOTE_IMAGE_NAME}:${CI_VERSION}
 
 Run Tests:
+  variables:
+    KUBERNETES_CPU_REQUEST: 4
+    KUBERNETES_CPU_LIMIT: 8
+    KUBERNETES_MEMORY_REQUEST: 4Gi
+    KUBERNETES_MEMORY_LIMIT: 8Gi
   stage: Test
   needs: [Build Dependencies]
   script:
