Fix hang in pytorch builds.
For some reason, previous skipif caused pytest to hang forever.
This occured inside my CI/CD docker containers.
However, on my macbook, it ran correctly.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,6 @@
 .git
-venv/
+# Ignore anv virtualenv looking files.
+**/venv*/
+# Ignore root pycache, ignore any nested pycache directories
 __pycache__
+**/__pycache__/**/*
